--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -146,7 +146,7 @@ h2 {
     }
     .magText { 
         margin-top: 0px;
-        padding-right : 130px; 
+        padding-right: 0px;
     }
 
 /* FORSIDE -------------------- AVSLUTT */
@@ -193,7 +193,7 @@ h2 {
     }
     .text-artikkel {
         height: 350px;
-        padding: 25px;
+        padding: 15px;
         position: relative;
     }
 
@@ -220,16 +220,13 @@ h2 {
 }
 
 .fremhevetText {
-    padding: 35px;
-    padding-left: 85px;
-    padding-right: 85px;
+    padding: 15px;
+
 }
-
-
 
 .samfunnsviterne {
     height: 450px;
-    padding: 60px;
+    padding: 30px;
     background-color: #F6F6F6;
 }
 .samfunnsviterne #header {
@@ -239,8 +236,7 @@ h2 {
 .samfunnsviterneFordeler {
     background-color: #941D78;
     height: 450px;
-    padding: 50px;
-    padding-left : 70px; /* 85px minus 15px from img padding */
+    padding: 30px;
 }
     .samfunnsviterneFordeler li {
             list-style-type: none;
@@ -297,10 +293,34 @@ h2 {
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
 
+/* FORSIDE */
+
+.magFront{
+    color:  white;
+    }
     .magText { 
         margin-top: 250px;
         padding-right : 130px; 
     }
+
+/* FORSIDE -------------------- AVSLUTT */
+
+.fremhevetText {
+    padding-left : 85px;
+    padding-right : 85px;
+}
+
+.text-artikkel {
+    padding : 25px;
+}
+
+.samfunnsviterne {
+    padding: 60px;
+}
+
+.samfunnsviterneFordeler {
+    padding: 50px;
+    padding-left : 70px; /* 85px minus 15px from img padding */
 
     }
 
