--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -55,25 +55,32 @@
         font-style: italic;
         font-weight: 400;
         opacity: 0.8;
+        color:#677588;
     }
     #title { 
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
+        font-size: 45px;
+        color: #364962;
     }
     #content {
         font-family: "Sentinel SSm A", "Sentinel SSm B";
         font-style: normal;
         font-weight: 300;
+        font-size: 15px;
         margin-top : 15px;
         margin-bottom : 15px;
         margin-right : 15px;
+        color: #364962;
     }
     #heading {
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
-        min-height: 45px;
+        min-height: 75px;
+        font-size : 35px;
+        color: #364962;
     }
     .button-les {
         font-family: "Knockout 28 A", "Knockout 28 B";
@@ -91,7 +98,7 @@
     .sfButton {
         font-family: knockout;
         font-size : 1.2em;
-        border: solid 2px white;
+        border: solid 1px white;
         margin-top: 30px;
         margin-bottom: 30px;
         padding: 5px;
@@ -101,7 +108,7 @@
     .sfButton2 {
         font-family: knockout;
         font-size : 1.2em;
-        border: solid 2px black;
+        border: solid 1px black;
         padding: 5px;
         margin-top: 30px;
         margin-bottom: 30px;
@@ -143,7 +150,7 @@
         margin-bottom: 35px;
         margin-top: 35px;
         font-family : sentinelBold;
-        font-size : 1.5em;
+        font-size: 23px;
     }
     .hovedArtInnhold .fastSpalteArt h5 {
         color : #67C0B3;
@@ -235,6 +242,7 @@
         display :inline-block;
         color: white;
         margin-left: 15px;
+        font-size: 30px;
     }
 
 
@@ -247,6 +255,9 @@
 }
     .annonse h2 {
         margin-top: 55px;
+        font-family: "Knockout 28 A", "Knockout 28 B";
+        font-style: normal;
+        font-weight: 400;
     }
 
 
@@ -266,6 +277,8 @@
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
+        font-size: 35px;
+        padding-bottom: 15px;
     }
     .footer .copyright {
         opacity : 0.5;
