--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -35,6 +35,11 @@
 
 }
 
+.magText h2#title, 
+.magText p#category,
+.magText p#content {
+    color : white;
+}
 
 /* GENERISK KODE */
     .container {
@@ -55,43 +60,51 @@
         font-style: italic;
         font-weight: 400;
         opacity: 0.8;
+        color:#677588;
     }
     #title { 
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
+        font-size: 45px;
+        color: #364962;
     }
     #content {
         font-family: "Sentinel SSm A", "Sentinel SSm B";
         font-style: normal;
         font-weight: 300;
+        font-size: 15px;
         margin-top : 15px;
         margin-bottom : 15px;
         margin-right : 15px;
+        color: #364962;
     }
     #heading {
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
-        min-height: 45px;
+        min-height: 76px;
+        font-size : 35px;
+        color: #364962;
     }
     .button-les {
-        font-family: "Knockout 28 A", "Knockout 28 B";
-        font-style: normal;
-        font-weight: 400;
-        border-radius: 50px;
-        background: transparent;
-        border: 2px solid;
-        padding: 15px;
-    
-        position: absolute;
-        bottom: 30px;
-        right: 30px;
+    font-family: "Knockout 28 A", "Knockout 28 B";
+    font-style: normal;
+    font-weight: 400;
+    border-radius: 50%;
+    background: transparent;
+    border: 1px solid #364962 ;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 8px;
+    padding-right: 8px;
+    bottom: 30px;
+    right: 30px;
     }
     .sfButton {
         font-family: knockout;
         font-size : 1.2em;
-        border: solid 2px white;
+        border: solid 1px white;
         margin-top: 30px;
         margin-bottom: 30px;
         padding: 5px;
@@ -101,7 +114,7 @@
     .sfButton2 {
         font-family: knockout;
         font-size : 1.2em;
-        border: solid 2px black;
+        border: solid 1px black;
         padding: 5px;
         margin-top: 30px;
         margin-bottom: 30px;
@@ -143,7 +156,7 @@
         margin-bottom: 35px;
         margin-top: 35px;
         font-family : sentinelBold;
-        font-size : 1.5em;
+        font-size: 23px;
     }
     .hovedArtInnhold .fastSpalteArt h5 {
         color : #67C0B3;
@@ -209,6 +222,9 @@
     padding: 30px;
     background-color: #F6F6F6;
 }
+.samfunnsviterne img {
+     padding-bottom: 45px;
+}
 .samfunnsviterne #header {
     font-family: "Sentinel SSm A", "Sentinel SSm B";
     font-style: normal;
@@ -235,6 +251,7 @@
         display :inline-block;
         color: white;
         margin-left: 15px;
+        font-size: 30px;
     }
 
 
@@ -247,6 +264,9 @@
 }
     .annonse h2 {
         margin-top: 55px;
+        font-family: "Knockout 28 A", "Knockout 28 B";
+        font-style: normal;
+        font-weight: 400;
     }
 
 
@@ -266,6 +286,8 @@
         font-family: "Knockout 28 A", "Knockout 28 B";
         font-style: normal;
         font-weight: 400;
+        font-size: 35px;
+        padding-bottom: 15px;
     }
     .footer .copyright {
         opacity : 0.5;
