--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -84,23 +84,22 @@
         font-style: normal;
         font-weight: 400;
         min-height: 76px;
-
         font-size : 35px;
         color: #364962;
     }
     .button-les {
-    font-family: "Knockout 28 A", "Knockout 28 B";
-    font-style: normal;
-    font-weight: 400;
-    border-radius: 50%;
-    background: transparent;
-    border: 1px solid #364962 ;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
-    bottom: 30px;
-    right: 30px;
+        font-family: "Knockout 28 A", "Knockout 28 B";
+        font-style: normal;
+        font-weight: 400;
+        border-radius: 50%;
+        background: transparent;
+        border: 1px solid #364962 ;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 8px;
+        padding-right: 8px;
+        bottom: 30px;
+        right: 30px;
     }
     .sfButton {
         font-family: knockout;
@@ -109,17 +108,17 @@
         margin-top: 30px;
         margin-bottom: 30px;
         padding: 5px;
-        width: 165px;
+        min-width: 165px;
         background-color: transparent;
     }
     .sfButton2 {
         font-family: knockout;
         font-size : 1.2em;
         border: solid 1px black;
-        padding: 5px;
+        padding: 10px;
         margin-top: 30px;
         margin-bottom: 30px;
-        width: 185px;
+        min-width: 185px;
         background-color: transparent;
     }
     .hr-1 {
