--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -33,9 +33,7 @@ nav.navbar.navbar-light {
 
     border-style:solid;
     border-width:3px;  
-    border-bottom-color:#0a5373;;
-
-
+    border-bottom-color:#0a5373;
 }
 nav.navbar.navbar-light li {
     padding-left: 10px;
@@ -90,6 +88,14 @@ nav.navbar.navbar-light a {
         background-position: center;   
         background-size: contain ;       
     }
+    #topCategory {
+        font-family: "Sentinel SSm A", "Sentinel SSm B";
+        font-style: italic;
+        font-weight: 400;
+        opacity: 0.8;
+        margin-bottom: 50px;
+        
+    }
     #category {
         font-family: "Sentinel SSm A", "Sentinel SSm B";
         font-style: italic;
@@ -109,10 +115,10 @@ nav.navbar.navbar-light a {
         font-style: normal;
         font-weight: 300;
         line-height: 1.8;
-        font-size: 15px;
+        font-size: 16px;
         margin-top : 15px;
         margin-bottom : 15px;
-        margin-right : 15px;
+        /*margin-right : 15px;*/
         color: #364962;
     }
     #heading {
@@ -355,21 +361,19 @@ nav.navbar.navbar-light a {
 
 
 
+
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
-
 
     /* FORSIDE */
 
     .magFront{
 
 /* FORSIDE */
-
-
     color:  white;
     }
     .magText { 
-        margin-top: 250px;
+        margin-top: 230px;
         padding-right : 130px; 
     }
 
